fix: Correct PWA asset paths and base URL
Updates the `manifest.json` and `index.html` to use relative paths for assets and the PWA start URL. Configures Vite's `base` option to `./` to ensure correct asset resolution, especially in single-page application deployments.

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
-
 {
   "name": "בוחרים בחיים - מניעת סמים ואלכוהול",
   "short_name": "בוחרים בחיים",
   "description": "אתר הסברה למניעת צריכת סמים ואלכוהול",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
