--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 
 {
+  "homepage": "https://goldnoam.github.io/BohrimBahaim",
   "name": "choosing-life-prevention",
   "version": "1.0.0",
   "scripts": {
