feat: Integrate Gemini AI for virtual assistant
Adds a virtual assistant powered by Gemini AI to provide users with information and support regarding drug and alcohol prevention.

Includes:
- Gemini API integration service (`geminiService.ts`).
- AI chat component (`AIChat.tsx`) for user interaction.
- Type definition for chat messages (`types.ts`).
- Google AdSense and Google Analytics tracking scripts in `index.html`.
- Updated `package.json` to include `@google/genai` dependency.
- Minor adjustments to navigation links in `App.tsx` for better anchor linking.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
+
 {
   "name": "בוחרים בחיים - מניעת סמים ואלכוהול",
   "short_name": "בוחרים בחיים",
   "description": "אתר הסברה למניעת צריכת סמים ואלכוהול",
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
